--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "make-js-simple",
   "version": "1.0.0",
-  "description": "some functions to make js simple",
+  "description": "library to make js simple",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
